--- a/src/main/webapp/css/locker.css
+++ b/src/main/webapp/css/locker.css
@@ -136,3 +136,11 @@ html {
     display : block;
     transform: translateY(0);
 }
+.dropdown-content button {
+    border : 0;
+    outline : 0;
+    background-color: white;
+}
+.dropdown-content button:hover {
+    background-color: rgb(226, 226, 226);
+}
